--- a/Website For Hackathon/index.css
+++ b/Website For Hackathon/index.css
@@ -136,7 +136,7 @@ table {
 
 /* Starts here */
 
-ul {
+#brandLogo {
     list-style-type: none;
     margin: 0;
     padding: 35px;
@@ -145,12 +145,12 @@ ul {
 
 }
 
-ul li {
+#brandLogo li {
     display: inline;
     float: left;
 }
 
-ul li a {
+#brandLogo li a {
     font-size: 15px;
     text-decoration: none;
     color: white;
@@ -214,7 +214,7 @@ a.active {
 #second-section .card {
     display: grid;
     grid-row: 2/4;
-    background-color: white;
+    background-color: #222;
 }
 
 
@@ -244,4 +244,81 @@ a.active {
 
 #second-section .heading h2 {
     font-size: 50px;
+}
+
+
+
+/* Submission Section */
+
+
+#submission-section {
+    background-color: #eee;
+    width: 90%;
+    margin: auto;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 250px;
+}
+
+#submission-form #uploadFile {
+    grid-row: 1/3;
+    display: grid;
+}
+
+#first {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#second {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#third {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#fourth {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#uploadFile div {
+    padding-left: 0px;
+    /* padding: 20px; */
+
+}
+
+#seventh {
+    /* background-color: white; */
+    grid-column: 1/2;
+    grid-row: 4;
+}
+
+
+#uploadFile div {
+    /* padding-bottom: 6px; */
+    padding-top: 20px;
+}
+
+#submission-section #submit-illness {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#submission-section #submit-illness h2 {
+
+    font-size: 40px;
+    padding-top: 40px;
+    /* padding-left: 20px; */
+    text-align: center;
+}
+
+#submission-section #submit-illness ul {
+    padding-top: 20px;
+    /* text-align: center; */
 }
