--- a/Website For Hackathon/index.css
+++ b/Website For Hackathon/index.css
@@ -136,12 +136,24 @@ table {
 
 /* Starts here */
 
+
+/* Fonts Starts here */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+
+/* fonts End Here */
+
+body {
+    font-family: Open Sans, sans-serif;
+}
+
 #brandLogo {
     list-style-type: none;
     margin: 0;
     padding: 35px;
     overflow: hidden;
-    background-color: Black;
+    background-color: #1d3f6d;
 
 }
 
@@ -159,12 +171,12 @@ table {
     font-family: Sans-Serif;
 }
 
-li a:hover {
-    color: #04aa6d
+#brandLogo li a:hover {
+    color: #59c9d7
 }
 
-a.active {
-    background-color: #04aa6d;
+#brandLogo a.active {
+    background-color: #59c9d7;
 }
 
 
@@ -175,31 +187,61 @@ a.active {
     grid-template-columns: 1fr 1fr;
 }
 
-#upper-part div {
+#upper-part .first_image {
+    grid-column: 1;
+}
+
+#upper-part .text {
+    grid-column: 2;
+    grid-row: 1;
     display: grid;
     grid-auto-rows: 175px;
     /* vertical-align: center; */
     justify-content: center;
+
 }
 
 
-#upper-part div h2 {
-    grid-row: 2/3;
+#upper-part .text h2 {
+    /* grid-column: 1/2; */
+    grid-row: 2;
     /* background-color: black; */
     /* color: white; */
     font-family: sans-serif;
     font-size: 80px;
 }
 
-#upper-part div p {
-    grid-row: 3/4;
+#upper-part .text p {
+    grid-column: 1;
+    grid-row: 3;
 }
 
+#upper-part .text h2 {
+    font-weight: 400;
+    color: #1d3f6d;
+    /* font-family: Arial, Helvetica, sans-serif */
+}
+
+#upper-part .text h2 span {
+    font-weight: 800;
+    color: #04AA6D;
+    /* font-family: Arial, Helvetica, sans-serif */
+}
+
+#upper-part .text p {
+    font-weight: 400;
+    color: #1d3f6d;
+    font-size: 15px;
+    /* font-family: Arial, Helvetica, sans-serif */
+}
 
 /* End of First Section */
 
 
 /* Second Section Starts here */
+
+
+
 
 #second-section {
     display: grid;
@@ -211,14 +253,61 @@ a.active {
     padding-top: 20px;
 }
 
+/* 
+#shape {
+    height: 50px;
+    width: 50px;
+    top: 320px;
+    right: 320px;
+    background-color: #59c9d7;
+    position: absolute;
+    z-index: -1;
+} */
+
+
 #second-section .card {
     display: grid;
     grid-row: 2/4;
-    background-color: #222;
+    background-color: #1d3f6d;
+    transition: .5s ease;
 }
 
 
+/* Hover Effects Starts Here */
+/* #second-section .card a {
+    opacity: 0;
+} */
 
+#second-section .card .brain:hover,
+.cancer:hover,
+.tuberculosis:hover {
+    transition: .5s ease;
+    opacity: 0.3;
+}
+
+
+#second-section .card a {
+    text-decoration: none;
+    opacity: 1;
+    display: block;
+    background-color: #1d3f6d;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+    transition: .5s ease;
+}
+
+#second-section .card a:hover {
+    text-decoration: none;
+    opacity: 1;
+    display: block;
+    background-color: #04AA6D;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+
+/* Hover Effects Ends here */
 #second-section .card1 .brain {
     background-image: url('brain.jpg');
     object-fit: scale-down;
@@ -242,18 +331,38 @@ a.active {
     grid-column: 2;
 }
 
+/* Second Section Text Manipulation Starts here */
 #second-section .heading h2 {
-    font-size: 50px;
+    font-size: 53px;
+    font-weight: 800;
+    color: #1d3f6d;
+}
+
+#second-section .heading p {
+    font-size: 14px;
+    padding-top: 5px;
+    padding-left: 5px;
+    font-weight: 400;
+    color: #1d3f6d
 }
 
 
+#second-section {
+    padding-bottom: 50px;
+}
+
+/* Second Section Text Manipulation Ends here */
+/* Second Section Ends Here */
 
 /* Submission Section */
 
 
 #submission-section {
-    background-color: #eee;
+    margin-bottom: 150px;
+    background-color: #1d3f6d;
+    color: white;
     width: 90%;
+    height: 300px;
     margin: auto;
     margin-top: 50px;
     display: grid;
@@ -262,8 +371,14 @@ a.active {
 }
 
 #submission-form #uploadFile {
+    padding-top: 25px;
     grid-row: 1/3;
     display: grid;
+}
+
+#uploadFile label {
+    display: block;
+    padding-bottom: 15px;
 }
 
 #first {
@@ -298,6 +413,19 @@ a.active {
     grid-row: 4;
 }
 
+#submit {
+    padding: 8px 60px;
+    background-color: #04AA6D;
+    color: white;
+    transition: 0.5s ease;
+    border: 0px;
+}
+
+#submit:hover {
+    color: #04AA6D;
+    background-color: white;
+}
+
 
 #uploadFile div {
     /* padding-bottom: 6px; */
@@ -322,3 +450,16 @@ a.active {
     padding-top: 20px;
     /* text-align: center; */
 }
+
+/* Submission Section Design */
+
+
+#submit-illness div ul li {
+    /* list-style-type: cirlce; */
+    padding: 12px;
+    padding-left: 5px;
+
+}
+
+
+/* Submission Section Ends Here */
