--- a/Website For Hackathon/css/index.css
+++ b/Website For Hackathon/css/index.css
@@ -317,13 +317,13 @@ body {
 }
 
 #second-section .card2 .tuberculosis {
-    background-image: url('../images/tuberculosis.jpg');
+    background-image: url('../images/pituitory.png');
     background-size: cover;
     grid-row: 1/12;
 }
 
 #second-section .card3 .cancer {
-    background-image: url('../images/pneumonia.png');
+    background-image: url('../images/glioma.jpg');
     background-size: cover;
     grid-row: 1/12;
 }
